# legotrain

./: .gitignore  Makefile  README.md  pyproject.toml
src/: controller.py  event.py  gui.py  main.py  track.py  train.py
test/: LEGO_chromaticity.ipynb  Sensor_chromaticity_analysys.ipynb  bleak_device.py  bleak_scanner.py  blinking_led_test.py  demo.py  modes_scanner.py  test_handset.py  vision_sensor_analysis.py
