
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legotrain"
version = "0.0.0"
authors = [{ name = "Ivo Busko" }]
description = "Python scripts to support Lego City trains"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "pylgbst[bleak] @ git+https://github.com/cuernodegazpacho/pylgbst@dev",
]

[project.urls]
Repository = "https://github.com/cuernodegazpacho/legotrain"