
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legotrain"
version = "0.0.0"
authors = [{ name = "Ivo Busko" }]
description = "Python scripts to support Lego City trains"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "pylgbst[bleak] @ git+https://github.com/cuernodegazpacho/pylgbst@dev",
]

[project.optional-dependencies]
dev = [
    "pytest ~= 8.2",
    "ruff ~= 0.6.0",
]

[project.urls]
Repository = "https://github.com/cuernodegazpacho/legotrain"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true